--- a/app/views/haberes/liquidacionDetalles/lineaLiquidacionDetalle.scala.html
+++ b/app/views/haberes/liquidacionDetalles/lineaLiquidacionDetalle.scala.html
@@ -1,16 +1,23 @@
 @(detalle: models.haberes.LiquidacionDetalle, editable: Boolean)
 
 <tr data-id="@detalle.id">
-		
+
 		<td class="accion-editar">
 			@if(editable){
 				<a class="btn btn-default btn-xs modificarLiquidacionDetalle" href="@controllers.haberes.routes.LiquidacionDetallesController.editar(detalle.id)">
 				<i class="glyphicon glyphicon-edit"></i></a>
 			}
 		</td>
-		
-	
-	<td>@detalle.liquidacionConcepto.codigo - @detalle.liquidacionConcepto.denominacion</td>
+
+
+	<td>@detalle.liquidacionConcepto.codigo - @detalle.liquidacionConcepto.denominacion
+		@if(detalle.liquidacionConcepto.id == 810 || detalle.liquidacionConcepto.id == 826){
+			@if(detalle.periodo_id != null){
+				- (@detalle.periodo.nombre)
+			}
+
+		}
+	</td>
 	<td align="center">@utils.NumberUtils.formatNumber(detalle.cantidad.doubleValue())</td>
 	<td align="center">
 		@if(detalle.liquidacionConcepto.liquidacionConceptoTipo.id == models.haberes.LiquidacionConceptoTipo.HABERES_CON_APORTE){
@@ -31,9 +38,9 @@
 		}
 	</td>
 	<td>
-	@if(editable){	
+	@if(editable){
 		<a class="btn btn-default btn-xs eliminarLiquidacionDetalle" href="@controllers.haberes.routes.LiquidacionDetallesController.eliminar(detalle.id)"><i class="glyphicon glyphicon-trash icono-eliminar"></i></a>
 	}
 	</td>
-	
+
 </tr>
