--- a/app/views/recupero/recuperoFactura/tabsRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/tabsRecuperoFactura.scala.html
@@ -25,10 +25,12 @@
 <hr />
 
 <div class="row">
-	<div class="col-sm-6">
+	<div class="col-sm-12">
 		@views.html.recupero.recuperoFactura.contenidoTabNotaCredito(formularioCarga,recuperoFacturaForm)
 	</div>
-	<div class="col-sm-6">
+</div>
+<div class="row">
+	<div class="col-sm-12">
 		@views.html.recupero.recuperoFactura.contenidoTabNotaDebito(formularioCarga,recuperoFacturaForm)
 	</div>
 
