--- a/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
@@ -21,10 +21,13 @@
 				<thead>
 					<tr>
 						<!--  <th class="accion-editar">#</th>-->
+						<th>Numero</th>
+						<th>CAE</th>
+						<th>Fecha CAE</th>
 						<th>Planilla</th>
 						<th>Fecha</th>
 						<th>Producto</th>
-						<th>UDM</th>
+
 						<th>Cantidad</th>
 						<th>Precio</th>
 						<th>Subtotal</th>
