--- a/app/views/recupero/recuperoNotaCredito/indexRecuperoNotaCredito.scala.html
+++ b/app/views/recupero/recuperoNotaCredito/indexRecuperoNotaCredito.scala.html
@@ -47,6 +47,7 @@
 			</div>
 	</div>
 </div>
+
 <script>
 $( function(){
 	/**
@@ -83,6 +84,34 @@ $( function(){
 			});
 		}
 		return false;
+	});
+
+	$('.notaCredito').click( function() {
+
+		var url = $(this).attr("data-url");
+		var dialogo = $('<div></div>');
+
+		dialogo.dialog({
+			title: "Notas",
+	    	resizable: false,
+			autoOpen: true,
+			modal: true,
+			height: 250,
+			width:750,
+	        buttons: {
+		          Cerrar: function() {
+		            $( this ).dialog( "destroy" );
+		          }
+		    },
+	    	close: function(event, ui ){
+	    		$(this).dialog( "destroy" );
+	    	},
+		    open: function( event, ui ) {
+				$.post(url,  function(data){
+					dialogo.html(data);
+				});
+		    }
+	    });
 	});
 
 
