--- a/app/views/recupero/recuperoNotaCredito/lineaNotaCredito.scala.html
+++ b/app/views/recupero/recuperoNotaCredito/lineaNotaCredito.scala.html
@@ -20,7 +20,7 @@
 
 	<td>
 		@if(linea.cae != null && !linea.cae.isEmpty()) {
-			<a class="btn btn-default btn-xs notSeleccion notaDebitoCredito" data-url="@controllers.recupero.routes.RecuperoReportesController.notaCredito(linea.id)">
+			<a class="btn btn-default btn-xs notSeleccion notaCredito" data-url="@controllers.recupero.routes.RecuperoReportesController.notaCredito(linea.id)">
 				<i class="glyphicon glyphicon-list-alt"></i>
 			</a>
 		}
@@ -32,36 +32,3 @@
 
 </tr>
 
-<script>
-$( function(){
-	$('.notaDebitoCredito').click( function() {
-
-		var url = $(this).attr("data-url");
-		var dialogo = $('<div></div>');
-
-		dialogo.dialog({
-			title: "Notas",
-	    	resizable: false,
-			autoOpen: true,
-			modal: true,
-			height: 250,
-			width:750,
-	        buttons: {
-		          Cerrar: function() {
-		            $( this ).dialog( "destroy" );
-		          }
-		    },
-	    	close: function(event, ui ){
-	    		$(this).dialog( "destroy" );
-	    	},
-		    open: function( event, ui ) {
-				$.post(url,  function(data){
-					dialogo.html(data);
-				});
-		    }
-	    });
-	});
-
-
-});
-</script>
