--- a/app/views/recupero/recuperoNotaDebito/lineaNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/lineaNotaDebito.scala.html
@@ -19,7 +19,7 @@
 
 	<td>
 		@if(linea.cae != null && !linea.cae.isEmpty()) {
-			<a class="btn btn-default btn-xs notSeleccion notaDebitoCredito" data-url="@controllers.recupero.routes.RecuperoReportesController.notaDebito(linea.id)">
+			<a class="btn btn-default btn-xs notSeleccion notaDebito" data-url="@controllers.recupero.routes.RecuperoReportesController.notaDebito(linea.id)">
 				<i class="glyphicon glyphicon-list-alt"></i>
 			</a>
 		}
@@ -32,33 +32,7 @@
 </tr>
 <script>
 $( function(){
-	$('.notaDebitoCredito').click( function() {
 
-		var url = $(this).attr("data-url");
-		var dialogo = $('<div></div>');
-
-		dialogo.dialog({
-			title: "Notas",
-	    	resizable: false,
-			autoOpen: true,
-			modal: true,
-			height: 250,
-			width:750,
-	        buttons: {
-		          Cerrar: function() {
-		            $( this ).dialog( "destroy" );
-		          }
-		    },
-	    	close: function(event, ui ){
-	    		$(this).dialog( "destroy" );
-	    	},
-		    open: function( event, ui ) {
-				$.post(url,  function(data){
-					dialogo.html(data);
-				});
-		    }
-	    });
-	});
 
 
 });
