--- a/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/verRecuperoFactura.scala.html
@@ -23,7 +23,7 @@
 					<li role="presentation">
 						<a role="menuitem" id="imprimirFacturaAfip" tabindex="-1" href="#" data-url="@controllers.recupero.routes.RecuperoReportesController.imprimirFacturaAfip(recuperoFactura.id)">Imprimir factura AFIP</a>
 
-						<a role="menuitem" tabindex="-1" href="@controllers.recupero.routes.RecuperoReportesController.imprimirFactura(recuperoFactura.id)">Imprimir factura</a>
+						<!-- <a role="menuitem" tabindex="-1" href="@controllers.recupero.routes.RecuperoReportesController.imprimirFactura(recuperoFactura.id)">Imprimir factura</a> -->
 					</li>
 				  </ul>
 				</div>
