--- a/app/views/recupero/recuperoFactura/modalBusquedaRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/modalBusquedaRecuperoFactura.scala.html
@@ -61,7 +61,13 @@ $( function(){
 		var id = $(this).attr('data-id');
 
 		$.get(url+"?id="+id, function(data){
+			var inputId = $("#monto");
+			inputId.val(data.monto);
+
+
 			$(document).trigger("modal.seleccion.recuperoFactura.simple", data);
+
+
 		});
 	});
 
