--- a/app/views/recupero/recuperoFactura/tabsRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/tabsRecuperoFactura.scala.html
@@ -90,7 +90,7 @@
 										</a>
 									</div>
 									<div class="col-sm-3">
-										<a href="@controllers.recupero.routes.RecuperoFacturasController.correrFacturaAfip(recuperoFacturaForm.field("id").value.toLong)" class="btn btn-default">
+										<a href="@controllers.recupero.routes.RecuperoFacturasController.getUltimoComprobante(recuperoFacturaForm.field("id").value.toLong)" class="btn btn-default">
 											<i class="glyphicon glyphicon-minus-sign"></i> ultimo numero
 										</a>
 									</div>
