--- a/app/views/recupero/recuperoFactura/tabsRecuperoFactura.scala.html
+++ b/app/views/recupero/recuperoFactura/tabsRecuperoFactura.scala.html
@@ -83,12 +83,15 @@
 								}
 							</div>
 							@if(Usuario.getUsuarioSesion() == 1 && factura.estado.id == models.Estado.RECUPERO_FACTURA_APROBADO){
+							<hr>
 								<div class="row">
-									<div class="col-sm-3">
-										<a href="@controllers.recupero.routes.RecuperoFacturasController.correrFacturaAfip(recuperoFacturaForm.field("id").value.toLong)" class="btn btn-default">
-											<i class="glyphicon glyphicon-minus-sign"></i> Correr Factura AFIP
-										</a>
-									</div>
+									@if(factura.cae == null || factura.cae.isEmpty()){
+										<div class="col-sm-3">
+											<a href="@controllers.recupero.routes.RecuperoFacturasController.correrFacturaAfip(recuperoFacturaForm.field("id").value.toLong)" class="btn btn-default">
+												<i class="glyphicon glyphicon-minus-sign"></i> Correr Factura AFIP @factura.cae
+											</a>
+										</div>
+									}
 									<div class="col-sm-3">
 										<a href="@controllers.recupero.routes.RecuperoFacturasController.getUltimoComprobante(recuperoFacturaForm.field("id").value.toLong)" class="btn btn-default">
 											<i class="glyphicon glyphicon-minus-sign"></i> ultimo numero
