--- a/app/views/recupero/recuperoNotaCredito/lineaNotaCredito.scala.html
+++ b/app/views/recupero/recuperoNotaCredito/lineaNotaCredito.scala.html
@@ -28,6 +28,12 @@
 			<a class="btn btn-default btn-xs eliminarNotaCredito delete-confirm-link" href="@controllers.recupero.routes.RecuperoNotasCreditosController.eliminar(linea.id)">
 			<i class="glyphicon glyphicon-trash icono-eliminar"></i></a>
 		}
+		@if(Usuario.getUsuarioSesion() == 1 && (linea.cae == null || linea.cae.isEmpty())){
+			<a href="@controllers.recupero.routes.RecuperoFacturasController.correrNota(linea.id,TipoComprobante.NOTA_CREDITO)" class="btn btn-default">
+				<i class="glyphicon glyphicon-minus-sign"></i>
+			</a>
+		}
+
 	</td>
 
 </tr>
