add info recibos cheques

--- a/app/views/recupero/recuperoRecibo/recuperoReciboFactura/indexRecuperoReciboFactura.scala.html
+++ b/app/views/recupero/recuperoRecibo/recuperoReciboFactura/indexRecuperoReciboFactura.scala.html
@@ -27,6 +27,7 @@
 						<th width="95">Monto Factura</th>
 						<th width="95">Monto</th>
 						<th width="95">Saldo</th>
+						<th width="95">Info</th>
 
 						 @if(editable){
 						<th width="30">#</th>
