--- a/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
+++ b/app/views/recupero/recuperoNotaDebito/indexRecuperoNotaDebito.scala.html
@@ -9,7 +9,7 @@
 		@if(rf.estado_id == models.Estado.RECUPERO_FACTURA_APROBADO) {
 			@if(Permiso.check("recuperoNotasEditar")) {
 
-				@if(rf.cae != null && !rf.cae.isEmpty()){
+				@if((rf.cae != null && !rf.cae.isEmpty() ) || !rf.puntoVenta.habilitado){
 					<a class="btn btn-default btn-xs" href="#" id="nuevoNotaDebito"><i class="glyphicon glyphicon-plus"></i> Nuevo</a>
 				}else{
 					(La Factura no tiene un CAE asigna aun.)
